--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,11 +1,11 @@
 container_commands:
   collectstatic:
-    command: "django-admin.py collectstatic --noinput"
+    command: "python manage.py collectstatic --noinput"
   01syncdb:
-    command: "django-admin.py syncdb --noinput"
+    command: "python manage.py syncdb --noinput"
     leader_only: true
   02migrate:
-    command: "django-admin.py migrate"
+    command: "python manage.py migrate"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:container:python:
