--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,11 +1,8 @@
 container_commands:
   collectstatic:
-    command: "python manage.py collectstatic --noinput"
-  01syncdb:
-    command: "python manage.py syncdb --noinput"
-    leader_only: true
-  02migrate:
-    command: "python manage.py migrate"
+    command: "source /opt/python/current/env && source /opt/python/run/venv/bin/activate && cd /opt/python/current/app && python manage.py collectstatic --noinput"
+  01migrate:
+    command: "source /opt/python/current/env && source /opt/python/run/venv/bin/activate && cd /opt/python/current/app && python manage.py migrate --noinput"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:container:python:
