--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,9 +1,6 @@
 container_commands:
-  collectstatic:
+  01collectstatic:
     command: "source /opt/python/current/env && source /opt/python/run/venv/bin/activate && cd /opt/python/current/app && python manage.py collectstatic --noinput"
-  01migrate:
-    command: "source /opt/python/current/env && source /opt/python/run/venv/bin/activate && cd /opt/python/current/app && python manage.py migrate --noinput"
-    leader_only: true
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: EnSite.wsgi:application
