--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,6 +1,6 @@
 container_commands:
-  01collectstatic:
-    command: "source /opt/python/current/env && source /opt/python/run/venv/bin/activate && cd /opt/python/current/app && python manage.py collectstatic --noinput"
+  01_collectstatic:
+    command: "source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: EnSite.wsgi:application
