--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,6 +1,6 @@
 container_commands:
-  01_collectstatic:
-    command: "source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
+  collectstatic:
+    command: "source $PYTHONPATH/activate"
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: EnSite.wsgi:application
